// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<div>
  <button
    class="styles__StyledButton-sc-1tgmejn-0 iFnVFy"
  >
    Button text
  </button>
</div>
`;

exports[`Button renders with link correctly 1`] = `
<div>
  <a
    class="styles__StyledLink-sc-1tgmejn-1 dogzke"
    href="/url"
    target="_blank"
  >
    Button text
  </a>
</div>
`;
